@@ -26,3 +26,14 @@ public class Main {
     }
 }
 ```
+
+### output 
+##### using this Run button
+![java run](https://github.com/user-attachments/assets/788dcde6-6aca-4532-9c61-def5a86fa1d3)
+
+```go
+PS C:\Users\akash\OneDrive\Desktop\java>  & 'C:\Program Files\Java\jdk-22\bin\java.exe' '--enable-preview' '-XX:+ShowCodeDetailsInExceptionMessages' '-cp' 'C:\Users\akash\AppData\Roaming\Code\User\workspaceStorage\300f8feb3ca9553ac1bb9d345d8b7a7c\redhat.java\jdt_ws\java_a4b13e7e\bin' 'Main' 
+
+Hallow World
+PS C:\Users\akash\OneDrive\Desktop\java> 
+```
